{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 189,
  "lineage": "a6c82875-a01c-2b4a-811f-eabd913353d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a9cde188c45c17a",
            "domain": "vpc",
            "id": "eipalloc-01a9cde188c45c17a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-220-160-68.compute-1.amazonaws.com",
            "public_ip": "3.220.160.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ENV": "project",
              "Name": "eks-cluster"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "eks-cluster"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubectl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:813488695946:instance/i-07a2269d1a5b41afd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a2269d1a5b41afd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-002ac94c5ddfb6c70",
            "private_dns": "ip-10-0-30-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.148",
            "public_ip": "54.175.11.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065c5b0a90d40a648",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007492482eed802dd",
            "tags": {
              "ENV": "project",
              "Name": "kubectl"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "kubectl"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eabb5e13fcd09acf"
            ]
          },
          "dependencies": [
            "aws_eks_addon.csi_driver",
            "aws_eks_cluster.eks-cluster-1",
            "aws_eks_node_group.node-clust-1",
            "aws_iam_openid_connect_provider.eks",
            "aws_iam_role.eks_ebs_csi_driver",
            "aws_internet_gateway.eks-igw",
            "aws_route_table.public-route",
            "aws_route_table_association.public-route-asc1",
            "aws_security_group.eks-sg",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.public-subnet-1a",
            "aws_subnet.public-subnet-1b",
            "aws_vpc.eks-vpc",
            "data.aws_iam_policy_document.csi",
            "data.tls_certificate.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813488695946:internet-gateway/igw-0f2ed67c4e7c837be",
            "id": "igw-0f2ed67c4e7c837be",
            "owner_id": "813488695946",
            "tags": {
              "ENV": "project",
              "Name": "eks-igw"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-016eb698d9a0535d5"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a9cde188c45c17a",
            "association_id": "eipassoc-04356dadf4e9f6818",
            "connectivity_type": "public",
            "id": "nat-0c61c195095357679",
            "network_interface_id": "eni-0cac3ed3028f6d973",
            "private_ip": "10.0.60.57",
            "public_ip": "3.220.160.68",
            "subnet_id": "subnet-007492482eed802dd",
            "tags": {
              "ENV": "project",
              "Name": "eks-natgw"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "eks-natgw"
            }
          },
          "dependencies": [
            "aws_eip.eks-eip",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813488695946:route-table/rtb-0f542b1892795c9c0",
            "id": "rtb-0f542b1892795c9c0",
            "owner_id": "813488695946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c61c195095357679",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ENV": "project",
              "Name": "private-route"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-016eb698d9a0535d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eks-eip",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.eks-natgw",
            "aws_route_table.public-route",
            "aws_subnet.public-subnet-1a",
            "aws_subnet.public-subnet-1b",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813488695946:route-table/rtb-0e33e41cce40ed7cc",
            "id": "rtb-0e33e41cce40ed7cc",
            "owner_id": "813488695946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2ed67c4e7c837be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ENV": "project",
              "Name": "public-route"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-016eb698d9a0535d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_subnet.public-subnet-1b",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079e702ae64b010c6",
            "route_table_id": "rtb-0f542b1892795c9c0",
            "subnet_id": "subnet-05274c7d0e2275777"
          },
          "dependencies": [
            "aws_eip.eks-eip",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.eks-natgw",
            "aws_route_table.private-route",
            "aws_route_table.public-route",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.public-subnet-1a",
            "aws_subnet.public-subnet-1b",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-asc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee676a7d539fae85",
            "route_table_id": "rtb-0f542b1892795c9c0",
            "subnet_id": "subnet-0dc3eef7ee6c8a91b"
          },
          "dependencies": [
            "aws_eip.eks-eip",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.eks-natgw",
            "aws_route_table.private-route",
            "aws_route_table.public-route",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.public-subnet-1a",
            "aws_subnet.public-subnet-1b",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0248b2f2da67c5193",
            "route_table_id": "rtb-0e33e41cce40ed7cc",
            "subnet_id": "subnet-007492482eed802dd"
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_route_table.public-route",
            "aws_subnet.public-subnet-1a",
            "aws_subnet.public-subnet-1b",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-asc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7afc3eb65a4fc4d",
            "route_table_id": "rtb-0e33e41cce40ed7cc",
            "subnet_id": "subnet-00d0459f6af61d4d8"
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_route_table.public-route",
            "aws_subnet.public-subnet-1b",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813488695946:security-group/sg-0eabb5e13fcd09acf",
            "description": "Allow , ssh, http and HTTPS to web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eabb5e13fcd09acf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Mysql DB ingress",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "nfs",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "eks-sg",
            "name_prefix": "",
            "owner_id": "813488695946",
            "revoke_rules_on_delete": false,
            "tags": {
              "ENV": "project",
              "Name": "eks-sg"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-016eb698d9a0535d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813488695946:subnet/subnet-05274c7d0e2275777",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05274c7d0e2275777",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "813488695946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "project",
              "Name": "private-subnet-1a",
              "name": "private"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "private-subnet-1a",
              "name": "private"
            },
            "vpc_id": "vpc-016eb698d9a0535d5"
          },
          "dependencies": [
            "aws_subnet.public-subnet-1b",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813488695946:subnet/subnet-0dc3eef7ee6c8a91b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc3eef7ee6c8a91b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "813488695946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "project",
              "Name": "private-subnet-1b",
              "name": "private"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "private-subnet-1b",
              "name": "private"
            },
            "vpc_id": "vpc-016eb698d9a0535d5"
          },
          "dependencies": [
            "aws_subnet.public-subnet-1b",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813488695946:subnet/subnet-007492482eed802dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007492482eed802dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "813488695946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "project",
              "Name": "public-subnet-1a",
              "name": "public"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "public-subnet-1a",
              "name": "public"
            },
            "vpc_id": "vpc-016eb698d9a0535d5"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813488695946:subnet/subnet-00d0459f6af61d4d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d0459f6af61d4d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "813488695946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "project",
              "Name": "public-subnet-1b",
              "name": "public"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "public-subnet-1b",
              "name": "public"
            },
            "vpc_id": "vpc-016eb698d9a0535d5"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813488695946:vpc/vpc-016eb698d9a0535d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01beb30d19744a52a",
            "default_route_table_id": "rtb-0a00585c21768ce7c",
            "default_security_group_id": "sg-02627c8375c9842c8",
            "dhcp_options_id": "dopt-e659649c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016eb698d9a0535d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a00585c21768ce7c",
            "owner_id": "813488695946",
            "tags": {
              "ENV": "project",
              "Name": "eks-vpc"
            },
            "tags_all": {
              "ENV": "project",
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}